fix(style): Fix some minor alignment issues and add a variable for body font.

--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -8,7 +8,7 @@ html {
 body {
   color: $cl-body;
   font: {
-    family: museo-sans, sans-serif;
+    family: $font-body;
     size: 20px;
   };
 }
