--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -11,6 +11,7 @@ $cl-black: #000000;
 $cl-white: #ffffff;
 
 $font-primary: house-script, sans-serif;
+$font-body: museo-sans, sans-serif;
 
 $container-max-width: 129rem;
 
