--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -17,4 +17,8 @@
 
 .footer__logo {
   margin-right: auto;
+
+  img {
+    vertical-align: middle;
+  }
 }
