--- a/src/scss/components/_social.scss
+++ b/src/scss/components/_social.scss
@@ -23,4 +23,8 @@
   &:focus {
     opacity: .6;
   }
+
+  img {
+    vertical-align: middle;
+  }
 }
